--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -35,6 +35,9 @@ en:
         label:
           active: Active
           not_active: Not Active
+      category_nav:
+        label: Federation
+        description: Federation for %{category_name}
       discovery:
         description: Follow %{category_name} on services that support ActivityPub using
       handle:
@@ -51,9 +54,6 @@ en:
           description: domain of your Mastodon account
           verifying: verifying the domain...
           invalid: not a valid Mastodon domain
-      followers:
-        label: Followers
-        description: People following this category via ActivityPub.
       follower:
         actor: Actor
         user: User
