DEV: Change settings root from plugins: to discourse_activity_pub
This is so the plugins settings are better categorized in the site settings UI.

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -1,4 +1,9 @@
 en:
+  admin_js:
+    admin:
+      site_settings:
+        categories:
+          discourse_activity_pub: "Discourse Activity Pub"
   js:
     category:
       discourse_activity_pub:
