--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -112,6 +112,11 @@ en:
         summary: "%{actor}'s followers"
       outbox:
         summary: "%{actor}'s activities"
+      error:
+        not_enabled: "ActivityPub is not enabled"
+        actor_not_found: "Actor not found"
+        follow_actor_not_found: "Follow actor not found"
+        cant_follow: "Actor cant follow"
     auth:
       error:
         not_enabled: "ActivityPub Auth is not enabled"
