--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -48,7 +48,7 @@ en:
         description: Use this handle to find and follow this category.
       follow:
         label: Follow
-        title: Follow %{name} via ActivityPub
+        title: Follow %{actor} via ActivityPub
         domain:
           label: Mastodon
           placeholder: domain
@@ -57,9 +57,9 @@ en:
           description: domain of your Mastodon account
           verifying: verifying the domain...
           invalid: not a valid Mastodon domain
-      create_follow:
-        label: Create Follow
-        title: Create a follow for %{actor}
+      actor_follow:
+        label: New Follow
+        title: New follow for %{actor} via ActivityPub
         find:
           label: Find an actor to follow
           btn_label: Find
@@ -75,10 +75,19 @@ en:
         following:
           label: Following
           title: '%{actor} is following %{follow_actor}'
-      follower:
+        follow_requested:
+          label: Follow Requested
+          title: '%{actor} has requested to follow %{follow_actor}'
+      actor_unfollow:
+        label: Unfollow
+        title: Unfollow for %{actor} via ActivityPub
+        modal_title: Confirm Unfollow
+        confirm: Are you sure you want %{actor} to unfollow %{followed_actor}?
+      follow_table:
         actor: Actor
         user: User
         followed_at: Followed
+        follow_pending: pending
       visibility:
         label:
           private: Followers Only
