--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -74,14 +74,17 @@ en:
         activity_not_supported: "Activity is not supported for actor and object"
         activity_not_valid: "Activity is not valid"
         invalid_create_actor: "Actor cannot create posts"
-        not_a_reply: "Cannot create an object that is not inReplyTo a Post"
         cannot_reply_to_deleted_post: "Cannot create an object inReplyTo a deleted Post"
         undo_actor_must_match_object_actor: "Undo Actor must match Object Actor"
         activity_host_must_match_object_host: "Activity host must match Object host"
         cant_find_post: "Can't find post"
         post_is_deleted: "Post is deleted"
         full_topic_not_enabled: "Full topic is not enabled"
-        not_following_announcer: "Announcement was not made by an actor the target is following."
+        announce_not_publicly_addressed: "Announcement is not publicly addressed."
+        only_resolved_targets_accept_announce: "Only resolved targets accept announce activities."
+        only_resolved_targets_accept_new: "Only resolved targets accept notes that are not replies."
+        only_followed_actors_can_create_new: "Only followed actors can create notes that are not replies."
+        only_full_topic_actors_accept_new: "Only full topic actors accept notes that are not replies."
     activity:
       create:
         failed_to_create_user: "Failed to create user for %{actor_id}"
