Add topic collection handling, shared user inbox and activity forwarding

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -82,11 +82,15 @@ en:
         post_is_deleted: "Post is deleted"
         full_topic_not_enabled: "Full topic is not enabled"
         announce_not_publicly_addressed: "Announcement is not publicly addressed."
-        only_resolved_targets_accept_announce: "Only resolved targets accept announce activities."
-        only_resolved_targets_accept_new: "Only resolved targets accept notes that are not replies."
-        only_followed_actors_can_create_new: "Only followed actors can create notes that are not replies."
+        only_category_actors_accept_new_topics: "Only category actors accept new topics."
+        only_followed_actors_create_new_topics: "Only followed actors can create new topics."
+        failed_to_respond_to_follow: "Failed to respond to follow: %{follow}"
+        failed_to_save_activity: "Failed to save activity: %{activity}"
+        failed_to_save_object: "Failed to save object: %{object}"
+        failed_to_save_actor: "Failed to save actor: %{actor}"
+        failed_to_save_collection: "Failed to save collection: %{collection}"
       info:
-        process_started: "Processing JSON delivered to %{target}"
+        process_started: "Processing JSON delivered to %{delivered_to}"
     activity:
       create:
         failed_to_create_user: "Failed to create user for %{actor_id}"
