Add object logging to rails logs with site setting

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -157,3 +157,4 @@ en:
     activity_pub_blocked_request_origins: "List of domains not allowed to make ActivityPub requests."
     activity_pub_delivery_delay_minutes: "Number of minutes to delay delivery of ActivityPub activities ('delete' activities are delivered instantly)."
     activity_pub_verbose_logging: "Enable verbose ActivityPub logs."
+    activity_pub_object_logging: "Print all incoming and outgoing ActivityPub objects in the logs (requires verbose logging)."
