Add warning log when user handler actor validation fails

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -86,6 +86,7 @@ en:
         only_category_actors_accept_new_topics: "Only category actors accept new topics."
         only_followed_actors_create_new_topics: "Only followed actors can create new topics."
         actor_already_following: "Actor is already following that object"
+        cant_create_user_for_actor: "Cannot create a user for %{actor_id}"
       error:
         failed_to_create_user: "Failed to create user for %{actor_id}"
         failed_to_create_post: "Failed to create post for %{object_id}"
