--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -62,7 +62,8 @@ en:
         invalid_digest: "Invalid Digest value. Computed SHA-256 digest: %{computed}; given: %{digest}"
         invalid_signature_pseudo_header: 'Invalid Signature pseudo-header (%{header})'
         invalid_date_header: "Invalid Date header: %{reason}"
-        request_failed: "%{verb} request to %{uri} failed: %{message}"
+        request_to_failed: "%{method} request to %{uri} failed: %{message}"
+        request_from_failed: "%{method} request from %{uri} failed: %{status} %{message}"
     process:
       warning:
         failed_to_process: "Failed to process %{object_id}"
