Working bulk publish and process

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -149,89 +149,90 @@ en:
         failed_to_deliver: "%{from_actor} failed to deliver to %{send_to}"
       info:
         successfully_delivered: "%{from_actor} successfully delivered to %{send_to}"
-    import:
-      warning:
-        import_did_not_start: "%{actor} failed to import the outbox of %{target_actor}"
-        actors_not_ready: "Actors are not ready"
-        not_following_target: "%{actor} is not following %{target_actor}"
-        outbox_response_invalid: "outbox of %{target_actor} returned an invalid response"
-      info:
-        import_started: "%{actor} started to import the activities of %{target_actor}."
-        import_finished: "%{actor} finished importing the activities of %{target_actor}."
-        created_actors:
-          one: "Created 1 actor."
-          other: "Created %{count} actors."  
-        updated_actors:
-          one: "Updated 1 actor."
-          other: "Updated %{count} actors."
-        created_objects:
-          one: "Created 1 object."
-          other: "Created %{count} objects."  
-        updated_objects:
-          one: "Updated 1 object."
-          other: "Updated %{count} objects." 
-        created_collections:
-          one: "Created 1 collection."
-          other: "Created %{count} collections."  
-        updated_collections:
-          one: "Updated 1 collection."
-          other: "Updated %{count} collections."
-        created_activities:
-          one: "Created 1 activity."
-          other: "Created %{count} activities."  
-        updated_activities:
-          one: "Updated 1 activity."
-          other: "Updated %{count} activities." 
-        created_users:
-          one: "Created 1 user."
-          other: "Created %{count} users."
-        updated_users:
-          one: "Updated 1 user."
-          other: "Updated %{count} users."
-        created_topics:
-          one: "Created 1 topic."
-          other: "Created %{count} topics."
-        updated_topics:
-          one: "Updated 1 topic."
-          other: "Updated %{count} topics."
-        created_replies:
-          one: "Created 1 reply."
-          other: "Created %{count} replies."
-        updated_replies:
-          one: "Updated 1 reply."
-          other: "Updated %{count} replies."
-    publish:
-      warning:
-        publish_did_not_start: "Failed to bulk publish the activities of %{actor}"
-        actor_not_ready: "Actor is not ready"
-        actor_model_not_supported: "Actor model is not supported"
-      info:
-        publish_started: "Started to publish activities of %{actor}."
-        publish_finished: "Published activities of %{actor}."
-        created_actors:
-          one: "Created 1 actor."
-          other: "Created %{count} actors."  
-        updated_actors:
-          one: "Updated 1 actor."
-          other: "Updated %{count} actors."
-        created_objects:
-          one: "Created 1 object."
-          other: "Created %{count} objects."  
-        updated_objects:
-          one: "Updated 1 object."
-          other: "Updated %{count} objects." 
-        created_collections:
-          one: "Created 1 collection."
-          other: "Created %{count} collections."  
-        updated_collections:
-          one: "Updated 1 collection."
-          other: "Updated %{count} collections."
-        created_activities:
-          one: "Created 1 activity."
-          other: "Created %{count} activities."  
-        updated_activities:
-          one: "Updated 1 activity."
-          other: "Updated %{count} activities." 
+    bulk:
+      process:
+        warning:
+          did_not_start: "%{actor} failed to process the outbox of %{target_actor}"
+          actors_not_ready: "Actors are not ready"
+          not_following_target: "%{actor} is not following %{target_actor}"
+          outbox_response_invalid: "outbox of %{target_actor} returned an invalid response"
+        info:
+          started: "%{actor} started processing the activities of %{target_actor}."
+          finished: "%{actor} finished processing the activities of %{target_actor}."
+          created_actors:
+            one: "Created 1 actor."
+            other: "Created %{count} actors."  
+          updated_actors:
+            one: "Updated 1 actor."
+            other: "Updated %{count} actors."
+          created_objects:
+            one: "Created 1 object."
+            other: "Created %{count} objects."  
+          updated_objects:
+            one: "Updated 1 object."
+            other: "Updated %{count} objects." 
+          created_collections:
+            one: "Created 1 collection."
+            other: "Created %{count} collections."  
+          updated_collections:
+            one: "Updated 1 collection."
+            other: "Updated %{count} collections."
+          created_activities:
+            one: "Created 1 activity."
+            other: "Created %{count} activities."  
+          updated_activities:
+            one: "Updated 1 activity."
+            other: "Updated %{count} activities." 
+          created_users:
+            one: "Created 1 user."
+            other: "Created %{count} users."
+          updated_users:
+            one: "Updated 1 user."
+            other: "Updated %{count} users."
+          created_topics:
+            one: "Created 1 topic."
+            other: "Created %{count} topics."
+          updated_topics:
+            one: "Updated 1 topic."
+            other: "Updated %{count} topics."
+          created_replies:
+            one: "Created 1 reply."
+            other: "Created %{count} replies."
+          updated_replies:
+            one: "Updated 1 reply."
+            other: "Updated %{count} replies."
+      publish:
+        warning:
+          publish_did_not_start: "Failed to bulk publish the activities of %{actor}"
+          actor_not_ready: "Actor is not ready"
+          actor_model_not_supported: "Actor model is not supported"
+        info:
+          started: "Started publishing the activities of %{actor}."
+          finished: "Finished publishing the activities of %{actor}."
+          created_actors:
+            one: "Created 1 actor."
+            other: "Created %{count} actors."  
+          updated_actors:
+            one: "Updated 1 actor."
+            other: "Updated %{count} actors."
+          created_objects:
+            one: "Created 1 object."
+            other: "Created %{count} objects."  
+          updated_objects:
+            one: "Updated 1 object."
+            other: "Updated %{count} objects." 
+          created_collections:
+            one: "Created 1 collection."
+            other: "Created %{count} collections."  
+          updated_collections:
+            one: "Updated 1 collection."
+            other: "Updated %{count} collections."
+          created_activities:
+            one: "Created 1 activity."
+            other: "Created %{count} activities."  
+          updated_activities:
+            one: "Updated 1 activity."
+            other: "Updated %{count} activities." 
   site_settings:
     activity_pub_enabled: "Enable ActivityPub plugin."
     activity_pub_rate_limit_post_to_inbox_per_minute: "Number of POST requests that can be made to an actor's inbox per minute."
